# rust-server

./: .gitignore  Cargo.toml  Dockerfile  service_account_key.json
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/api/: actix_controller.rs  client.rs  info_payloads.rs  mod.rs
src/adapters/db/: db_adapter.rs  db_connection.rs  db_repository_abstract.rs  mod.rs  model.rs
src/adapters/http/: helpers.rs  http_client_repository.rs  mod.rs
src/adapters/http_and_db_models/: course.rs  db_user_course_info.rs  deadline.rs  grade.rs  mod.rs
src/adapters/messaging/: fcm_adapter.rs  mod.rs
src/adapters/usecases/: mock_api_client.rs  mod.rs
src/adapters/utils/: errors.rs
src/api/: client.rs  helpers.rs
src/application/: mod.rs  services.rs
src/application/new_data_service/: mod.rs  new_data_service.rs
src/application/repositories/: fcm_abstract.rs  mod.rs  sync_service_abstract.rs
src/domain/: auth_notification_tokens.rs  course.rs  deadline.rs  full_info.rs  grade.rs  grades_overview.rs  mod.rs  user.rs  user_data.rs  utils.rs
src/domain.rs/: user.rs
src/infrastructure/: db.rs  firebase_messaging.rs  mod.rs  repositories.rs  web_server.rs
tests/: mod.rs
tests/api_tests/: get_user_courses_test.rs  get_user_deadlines_test.rs  get_user_grades_overview_test.rs  get_user_grades_test.rs  get_user_info_test.rs  mod.rs
tests/fixtures/: fixtures_run.rs  mod.rs  user_courses.json  user_deadlines.json  user_grades.json  user_grades_overview.json  user_info.json
tests/utils/: db_utils.rs  file_utils.rs  import_utils.rs  mod.rs
(+46 files in other folders)
