[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
mongodb = "2.1"
futures-util = "0.3"
regex = "1.11.1"
chrono = "0.4.38"
actix-web = "4"
openssl = { version = "0.10.64", features = ["vendored"] } 